overflow bug fix

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -782,6 +782,7 @@ a {
 	border-radius: 5px;
 	margin-top: 1rem;
 	margin-left: -4.2rem;
+	overflow-wrap: break-word;
 }
 
 .roomListRoom__actions svg {
